--- a/main.css
+++ b/main.css
@@ -19,3 +19,14 @@
     background-color: #ddd;
     color: black;
 }
+
+/* Set the canvas to cover the entire background */
+canvas#pattern {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
